// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BottomSheet /> render 1`] = `
<View
  onMoveShouldSetResponder={[Function]}
  onMoveShouldSetResponderCapture={[Function]}
  onResponderEnd={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderReject={[Function]}
  onResponderRelease={[Function]}
  onResponderStart={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  onStartShouldSetResponderCapture={[Function]}
  pointerEvents="box-none"
  style={
    Object {
      "alignSelf": "stretch",
      "bottom": -1292,
      "flex": 1,
      "height": 1292,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "transform": Array [
        Object {
          "translateY": -0,
        },
      ],
    }
  }
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "white",
          "flex": 1,
          "position": "relative",
        },
        undefined,
      ]
    }
  >
    0
    <View />
  </View>
</View>
`;

exports[`<Card /> render 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#fff",
      },
      Object {
        "borderRadius": 2,
        "elevation": 0,
        "flex": 1,
        "margin": 10,
        "padding": 10,
      },
      false,
      undefined,
    ]
  }
/>
`;

exports[`<Header /> render 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#fff",
        "flexDirection": "row",
        "justifyContent": "center",
        "minHeight": 55,
        "padding": 16,
      },
      false,
      Object {
        "paddingTop": 36,
      },
    ]
  }
>
  <View />
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "center",
      }
    }
  />
  <Text
    style={
      Object {
        "color": "#424242",
        "flex": 3,
        "fontSize": 16,
        "fontWeight": "bold",
        "textAlign": "center",
      }
    }
  />
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "center",
      }
    }
  />
</View>
`;

exports[`<HomeHeader /> render 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#fff",
      "padding": 16,
    }
  }
>
  <View />
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
        },
        Object {
          "marginTop": 20,
        },
      ]
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "#4f6780",
            "fontSize": 24,
          },
          undefined,
          Object {
            "fontFamily": "Material Design Icons",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {},
        ]
      }
    >
      若
    </Text>
    <Text
      style={
        Object {
          "color": "#333",
          "flex": 1,
          "fontSize": 16,
          "fontWeight": "100",
          "marginLeft": 16,
        }
      }
    >
      iCare Pontianak
    </Text>
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "#525252",
            "fontSize": 20,
          },
          undefined,
          Object {
            "fontFamily": "Ionicons",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {},
        ]
      }
    >
      
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "borderRadius": 5,
          "flexDirection": "row",
        },
        Object {
          "backgroundColor": "#ECEFF1",
          "marginBottom": undefined,
          "marginHorizontal": undefined,
          "marginTop": 12,
        },
        undefined,
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      placeholder="Mau cari tindakan atau bantuan apa?"
      placeholderTextColor="#78909C"
      rejectResponderTermination={true}
      style={
        Array [
          Object {
            "color": "#333",
            "flex": 1,
            "paddingHorizontal": 10,
            "paddingVertical": 4,
          },
          Object {
            "color": "#37474F",
          },
        ]
      }
      underlineColorAndroid="transparent"
    />
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "#37474F",
            "fontSize": 18,
          },
          Object {
            "marginHorizontal": 10,
          },
          Object {
            "fontFamily": "Ionicons",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {},
        ]
      }
    >
      
    </Text>
  </View>
</View>
`;

exports[`<Icon /> render 1`] = `
<Text
  allowFontScaling={false}
  style={
    Array [
      Object {
        "color": "#333",
        "fontSize": 24,
      },
      undefined,
      Object {
        "fontFamily": "Ionicons",
        "fontStyle": "normal",
        "fontWeight": "normal",
      },
      Object {},
    ]
  }
>
  
</Text>
`;

exports[`<ItemLayanan /> render 1`] = `
<View
  style={
    Array [
      Object {
        "flex": 1,
        "flexBasis": "30%",
      },
      Object {
        "borderBottomColor": "#CFD8DC",
        "borderBottomWidth": 1,
        "borderRightColor": "#CFD8DC",
        "borderRightWidth": 1,
      },
    ]
  }
>
  <View
    accessible={true}
    clickable={false}
    isTVSelectable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "opacity": 1,
        "padding": 16,
      }
    }
  >
    <Image
      style={
        Object {
          "flex": 1,
          "resizeMode": "contain",
        }
      }
    />
    <Text
      style={
        Object {
          "color": "#525252",
          "fontSize": 11,
          "marginTop": 12,
          "textAlign": "center",
        }
      }
    />
  </View>
</View>
`;

exports[`<SearchBar /> render 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderRadius": 5,
        "flexDirection": "row",
      },
      Object {
        "backgroundColor": "#ECEFF1",
        "marginBottom": undefined,
        "marginHorizontal": undefined,
        "marginTop": undefined,
      },
      undefined,
    ]
  }
>
  <TextInput
    allowFontScaling={true}
    placeholder="Mau cari tindakan atau bantuan apa?"
    placeholderTextColor="#78909C"
    rejectResponderTermination={true}
    style={
      Array [
        Object {
          "color": "#333",
          "flex": 1,
          "paddingHorizontal": 10,
          "paddingVertical": 4,
        },
        Object {
          "color": "#37474F",
        },
      ]
    }
    underlineColorAndroid="transparent"
  />
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "#37474F",
          "fontSize": 18,
        },
        Object {
          "marginHorizontal": 10,
        },
        Object {
          "fontFamily": "Ionicons",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        Object {},
      ]
    }
  >
    
  </Text>
</View>
`;

exports[`<StatusBar /> render 1`] = `<View />`;

exports[`<Title /> render 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#525252",
        "fontSize": 16,
      },
      Object {
        "color": "#37474F",
        "fontSize": 16,
        "marginBottom": 16,
        "marginHorizontal": 0,
        "marginTop": 0,
      },
      undefined,
    ]
  }
>
  Hello world!
</Text>
`;
